# kimi-bridge

./: .gitignore  AGENTS.md  INSTALL.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  kimi-drift.yml  release.yml
docs/: ARCHITECTURE.md  COMMANDS.md  CONFIGURATION.md  kimi-bridge.service
scripts/: check_distribution.py  check_docs.py  check_kimi_compatibility.py  check_release.py  smoke_server.py
src/kimi_bridge/: __init__.py  __main__.py  compatibility.py  compatibility_check.py  config.py  doctor.py  interactions.py  kimi_server.py  router.py  state.py  supported-kimi-code-versions.json
src/kimi_bridge/assets/: __init__.py
src/kimi_bridge/kimi_server/: __init__.py  client.py  contract.py  contract_validation.py  events.py  probe.py  supervisor.py  types.py  wire.py
src/kimi_bridge/router/: __init__.py  commands.py  core.py  files.py  formatting.py  interactions.py  models.py  rendering.py  sessions.py
tests/: conftest.py  test_compatibility.py  test_compatibility_check.py  test_config.py  test_doctor.py  test_feishu.py  test_kimi_server.py  test_main.py  test_public_docs.py  test_router.py  test_state.py  test_telegram.py  test_workflows.py
